[FIX] No wrap of items

--- a/frontend/src/components/PizzaBox/PizzaItems/PizzaItems.module.css
+++ b/frontend/src/components/PizzaBox/PizzaItems/PizzaItems.module.css
@@ -1,3 +1,4 @@
 .PizzaItems {
     display: flex;
+    flex-wrap: wrap;
 }
